--- a/doc/report.bib
+++ b/doc/report.bib
@@ -1,39 +1,16 @@
-%@online{flickrpy,
-%title = {\texttt{flickrpy}: A Python library for the Flickr API},
-%month = May,
-%year = {2013},
-%url = {https://code.google.com/p/flickrpy/}
-%}
-%@inproceedings{haskore,
-%  author = {Hudak, Paul},
-%  booktitle = {PADL},
-%  editor = {Jayaraman, Bharat},
-%  publisher = {Springer},
-%  series = {Lecture Notes in Computer Science},
-%  timestamp = {2011-07-07T00:00:00.000+0200},
-%  title = {An Algebraic Theory of Polymorphic Temporal Media.},
-%  url = {http://dblp.uni-trier.de/db/conf/padl/padl2004.html#Hudak04},
-%  volume = 3057,
-%  year = 2004
-%}
-%@online{lilypond,
-%title = {GNU LilyPond website},
-%month = May,
-%year = {2013},
-%url = {https://www.lilypond.org}
-%}
-%@online{rmagick,
-%title = {\texttt{RMagick} gem website},
-%month = May,
-%year = {2013},
-%url = {http://rmagick.rubyforge.org}
-%}
-%@online{imagemagick,
-%title = {The ImageMagick website},
-%month = May,
-%year = {2013},
-%url = {http://www.imagemagick.org}
-%}
-%
-%
+Find BibTex Syntax at:
+	https://en.wikipedia.org/wiki/BibTeX
 
+@techreport{techreport,
+	author 	= {Chang Liu and Michael Hicks and Elaine Shi},
+	title 		= {Memory Trace Oblivious Program Execution},
+	institution	= {The University of Maryland, College Park},
+	number	= {CS-TR-5020},
+	year		= { . }
+}
+
+@unpublished{paper,
+	author 	= {Chang Liu and Michael Hicks and Elaine Shi},
+	title 		= {Memory Trace Oblivious Program Execution},
+	note		= { Unpublished }
+}
