Changed bib label for mto paper. Added most of abstract. Changed documentclass to article. Using natbib package

--- a/doc/report.bib
+++ b/doc/report.bib
@@ -9,7 +9,7 @@ Find BibTex Syntax at:
 	year		= { . }
 }
 
-@unpublished{paper,
+@unpublished{mtope,
 	author 	= {Chang Liu and Michael Hicks and Elaine Shi},
 	title 		= {Memory Trace Oblivious Program Execution},
 	note		= { Unpublished }
