Added Software Foundations cite. And cites in paper so full reference list gets generated

--- a/doc/report.bib
+++ b/doc/report.bib
@@ -14,3 +14,9 @@ Find BibTex Syntax at:
 	title 		= {Memory Trace Oblivious Program Execution},
 	note		= { Unpublished }
 }
+
+@online{sf,
+	title		= {Software Foundations},
+	author	= {Benjamin C. Pierce et al.},
+	url		= {http://www.cis.upenn.edu/~bcpierce/sf/}
+}
