--- a/doc/report.tex
+++ b/doc/report.tex
@@ -106,6 +106,10 @@ In section \emph{SECTION LABEL}, we discuss challenges both technical and not.
 %- Duplication in definitions, lemmas, proofs for traces and trace patterns
 %
 %- Choosing to represent trace equivalence and trace pattern equivalence as Relations instead of functions (because they're only used in a relational way)
+\cite{mtope}
+\cite{sf}
+\cite{techreport}
+
 
 \bibliographystyle{plainnat}
 \bibliography{report}
