--- a/doc/report.tex
+++ b/doc/report.tex
@@ -2,6 +2,9 @@
 \usepackage{enumerate}
 \usepackage{url}
 
+% To use inline teletype command \texttt{}
+\usepackage{courier}
+
 %To use \citeauthor
 \usepackage[numbers]{natbib}
 
@@ -69,11 +72,104 @@ In section \emph{SECTION LABEL}, we discuss challenges both technical and not.
 \section{Introduction}
 \label{sec:introduction}
 % Summarizing your motivation and your accomplishments.
-\cite{techreport}
 
 
+\section {Overview}
 % The intermediate sections should contain full details about what you did.
-\section {Approach}
+
+We will begin by giving an overview of the Coq project files and the contents within each.
+It will be assumed that the reader is familiar with the definitions and concepts presented in \emph{Memory Trace Oblivious Program Execution} (MTOPE).
+Then, we will describe in more detail each file's contents with emphasis on definitions which differ substantially from those provided in the paper.
+
+
+\section{ Project Structure }
+
+% Include a section? Sflib, strong induction technique?
+%	\subsection{ External Requirements }
+	
+ 
+% TODO Maybe these shouldn't be subsections, but some form of list instead?
+	\subsection{ Core Definitions }
+	The foundation of our definitions are found in a file called core.v.
+	Here is where we define all structures common to that will be used in downstream definitions.
+	For the most part the definitions here follow one-to-one from those in the paper, however the definition of statement required special handling.
+	
+	Below we reproduce the relevant definitions from the paper and our Coq definitions.
+
+	
+\begin{figure}
+\caption{ MTPOE definitions for Statements and Programs }
+\label{fig:mto_statements}
+Numbers $n \in \textbf{Nat}$\\
+ORAM bank $o \in \textbf{ORAMbank}$\\
+Locations $p ::= n | o$\\
+Statements $ s ::= skip | x := e | x[e] := e | if(e, S, S) | while(e, S)$\\
+Programs $ S ::= p:s | S;S$
+\end{figure}
+
+\begin{figure}
+\caption{ Typing Judgement for statements : while}
+\label{fig:while_judgement}
+\[
+\frac{ \Gamma \vdash e : Nat \; l; T_{1}   \;\;\;\;  \Gamma, l_{0} \vdash S;T_{2}  \;\;\;\;   l \sqcup l_{0} \sqsubseteq L }
+	{ \Gamma, l_{0} \vdash p:\textbf{while}(e,S);\textbf{Loop}(p,T_{1},T_{2}) }
+\]
+\end{figure}	
+
+\begin{figure}
+\caption{Coq definitions for statements, programs and labeled statements}
+\label{fig:coq_statements}
+\begin{lstlisting}		
+Inductive statement : Type :=
+  | skip : statement
+  | assign: variable -> expression -> statement
+  | arrassign: variable -> expression -> expression -> statement
+  | stif: expression -> program -> program -> statement
+  | stwhile: expression -> program -> statement
+
+with labeledstatement : Type :=
+  | labline : location -> statement -> labeledstatement
+
+with program : Type :=
+  | oneLineProg : labeledstatement -> program
+  | progcat : program -> program -> program.
+\end{lstlisting}	
+\end{figure}
+
+
+
+	
+
+Figure \ref{fig:while_judgement} shows the typing rule for a \texttt{while} statement.
+Notice that even though figure \ref{fig:mto_statements} shows the definition of a while statement to be without a location, ie. \texttt{while(e,S)}, the typing judgement for statements types a while statement augmented with a location \texttt{p:while(e,S)}, which is structurally a "Program".
+The typing rule requires this information since the type of trace pattern produced depends on a while statements label.
+For this reason, we define \texttt{statement} in Coq to be analogous to the paper's definition, but we introduce a labeled statement.
+Doing this further requires writing the typing rules in terms of labeled statements, rather than plain statements as is done by the paper.
+	
+%	\begin{lstlistings}
+%		
+%	\end{lstlistings}
+
+	\subsubsection { Challenges }
+	
+	\subsection{ Typing Judgements }
+	\subsection{ Operational Semantics }
+	\subsection{ Lemmas and Proofs }
+	
+
+\section{  }
+
+
+\begin{lstlisting}
+
+Inductive expression : Type :=
+  | exvar : variable -> expression
+  | exop : expression -> binop ->\%\\*) expression -> expression
+  | exarr: variable -> expression -> expression
+  | exnum: mtoint -> expression.
+
+
+\end{lstlisting}
 
 \section{Challenges}
 
