Using T1 font encoding.

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -2,9 +2,11 @@
 \usepackage{enumerate}
 \usepackage{url}
 
+% Fixes issues with older encoding type that doesn't display < and > correctly.
+\usepackage[T1]{fontenc}
+
 % To put a border around figures
 \usepackage{ mdframed }
-
 
 % To use inline teletype command \texttt{}
 \usepackage{courier}
