Added citation for blogpost of strong induction technique

--- a/doc/report.bib
+++ b/doc/report.bib
@@ -20,3 +20,9 @@ Find BibTex Syntax at:
 	author	= {Benjamin C. Pierce et al.},
 	url		= {http://www.cis.upenn.edu/~bcpierce/sf/}
 }
+
+@online{strongind,
+	title		= {Proving the Strong Induction Principle for Natural Numbers in Coq},
+	author	= {Stefan Ciobaca},
+	url		= {http://pldev.blogspot.com/2012/02/proving-strong-induction-principle-for.html}
+}
