--- a/doc/report.tex
+++ b/doc/report.tex
@@ -326,7 +326,14 @@ o \sim_L o
 
 
 
+
+
 \subsection{ Lemmas and Proofs }
+
+When proving theorem one, we found a stond induction prinicple that we included. \cite{strongind}
+This was used twice in our proof. First, when considering the case in which the program is a single if statement, we performed strong induction on the number of statements in the program. In the case of a single while loop, the technical report makes use of induction over the number of times a while loop is executed. This was difficult to formalize in Coq, so we decided to do strong induction on the length of the trace from executing the while loop.
+
+
 
 % Proofs were written by humans for humans.
 % Many times there we're "abuses of notation", "lemma 5 is proved using a similar technique as lemma 4"
