--- a/doc/report.tex
+++ b/doc/report.tex
@@ -82,11 +82,36 @@ In section \ref{sec:discussion}, we discuss the issues and design decisions we m
 
 
 
+
+
 \section {Overview Requirements?}
 \label{sec:requirements}
 % The intermediate sections should contain full details about what you did.
 
 We will begin by giving an overview of the Coq project files and the contents within each.
+The proof package we have put tougher contains the following files listed in order such that items later in the list may require earlier ones, but not vice versa.
+
+\begin{enumerate}
+\item Sflib.v : Library provided by \emph{Software Foundations}. \cite{sf}
+\item tactic\_notations.v : Proof development helpers for handling inductive cases. (Technique from \emph{Software Foundations})\cite{sf}
+\item strong\_induction.v : Lemmas to allow using strong induction techniques in proving main theorem \cite{strongind}
+\item core.v : Common definitions for downstream dependencies
+\item typing.v : Type judgements and auxiliary typing constructs
+\item semantics.v : Operational semantics and auxiliary semantic constructs
+\item lemmas.v : Statement and 
+\item lemmas\_tracepatterns.v
+\item theorem.v : Statement and proof of the main MTOPE theorem.
+\item makefile : Coq generated makefile to build project
+\end{enumerate}
+
+Additionally, our package has a few other Coq standard library dependencies:
+\begin{itemize}
+\item FSets
+\item	Peano
+\item Decidable
+\end{itemize}
+
+
 It will be assumed that the reader is familiar with the definitions and concepts presented in \emph{Memory Trace Oblivious Program Execution} (MTOPE).
 Then, we will describe in more detail each file's contents with emphasis on definitions which differ substantially from those provided in the paper.
 
