--- a/doc/report.tex
+++ b/doc/report.tex
@@ -388,7 +388,9 @@ We have only admitted a single lemma in addition to those presented in the techn
 It states that running a program on an initially $\Gamma-$ valid memory will result in a  $\Gamma-$ valid memory.%REF FOR LEMMA
 
 One possible extension of memory trace obliviousness is allowing different elements of an array to occupy their own oram banks. 
-This would require entirely redefining how we represent arrays and labeled values, likely require much of the Coq code be rewritten.
+This would require entirely redefining how we represent arrays and labeled values, likely meaning much of our Coq code be rewritten.
+
+
 
 
 
