footnote was causing mdframed error

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -92,7 +92,9 @@ We will begin by giving an overview of the Coq project files and the contents wi
 The proof package we have put tougher contains the following files listed in order such that items later in the list may require earlier ones, but not vice versa.
 
 \begin{enumerate}
-\item mto_artith.v : Simple (Admitted lemmas from Coq.Arith.Max) \footnote{These lemmas are proven in the standard library but we had technical difficulties including them in our project.}
+\item mto\_artith.v : Simple (Admitted lemmas from Coq.Arith.Max)
+% TODO  - Footnote causes mdframed to shit the bed.
+%\footnote{These lemmas are proven in the standard library but we had technical difficulties including them in our project.}
 \item Sflib.v : Library provided by \emph{Software Foundations}. \cite{sf}
 \item tactic\_notations.v : Proof development helpers for handling inductive cases. (Technique from \emph{Software Foundations})\cite{sf}
 \item strong\_induction.v : Lemmas to allow using strong induction techniques in proving main theorem \cite{strongind}
