--- a/doc/report.tex
+++ b/doc/report.tex
@@ -443,13 +443,27 @@ We have been able to find several typos in the paper, though we still have not m
 Though the theorem of the paper has been verified, the supporting lemmas used have not yet all been verified. 
 This is a very natural spot for future work, completing the verification of the lemmas used. 
 We have only admitted a single lemma in addition to those presented in the technical report. 
-% FIGURE OF UNPROVED LEMMA 
-It states that running a program on an initially $\Gamma-$ valid memory will result in a  $\Gamma-$ valid memory.%REF FOR LEMMA
+Shown in figure \ref{fig:coq_unproven_lemma}, it states that running a program on an initially $\Gamma$-valid memory will result in a  $\Gamma$-valid memory.
 
 One possible extension of memory trace obliviousness is allowing different elements of an array to occupy their own oram banks. 
 This would require entirely redefining how we represent arrays and labeled values, likely require much of the Coq code be rewritten.
 
+\begin{figure}
+\caption{Unproven auxiliary lemma}
+\label{fig:coq_unproven_lemma}
 
+\[
+\frac {M \hbox{ is }\Gamma\hbox{-valid} \;\;\;\; \langle M;S \rangle \Downarrow_{t} M'}
+        {M' \hbox{ is }\Gamma \hbox{-valid}}
+\]
+
+\begin{lstlisting}
+Lemma stayvalid :
+  forall (gamma:environment) (M M':memory) (p:program) (t:trace),
+	(gammavalid gamma M) -> (progSem M p t M') -> (gammavalid gamma M').
+\end{lstlisting}
+
+\end{figure}
 
 
 
